--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -28,12 +28,6 @@ client_0_ap=node080
 client_1=node082
 client_1_ap=node080
 
-
-# Number of Services
-servicesNumber=2
-service_0=AB
-service_1=VLC
-
 # Number of VM Types
 vmTypesNumber=3
 vmType_0=small
@@ -98,49 +92,73 @@ bandwidth_MediumVM=1
 bandwidth_LargeVM=1
                 
 
-#####################################
-#     VM Requests Distributions
-#####################################
-# VM Request rate configuration
-#vmRate_type_0=Exponential
-#vmRate_lamda_0=1.0
-#----------------------------------
-# vmRate_type_0=Pareto
-# vmRate_location_0=0.01
-# vmRate_shape_0=0.8
-#----------------------------------
-vmRate_type_0=Random
-vmRate_min_rate_0=1.0
-vmRate_max_rate_0=1.0
 
-
-# VM Lifetime configuration per Provider
-
-#lifetime_type_0=Exponential
-#lifetime_lamda_0=1.0
-
-lifetime_type_0=Random
-lifetime_min_0=2.0
-lifetime_max_0=2.0
 
 
 ##########################################################################
-#     Web requests Configuration
+#     Requests for Service Configuration
 ##########################################################################
-provider0_services=2
 
+#Services: AB,VLC, Other
+
+#providerX_servicesNumber=2
+
+#providerX_serviceYY_id=0
+#providerX_serviceYY_name=AB
+#providerX_serviceYY_estimatedRequets=1000
+
+#------------ Rate
+# Rate: Random
+#providerX_serviceYY_RateType=Random
+#providerX_serviceYY_rate_min=1.0
+#providerX_serviceYY_rate_max=1.0
+# Rate: Exponential
+#providerX_serviceYY_RateType=Exponential
+#providerX_serviceYY_rate_lamda=1.0
+# Rate: Pareto
+# providerX_serviceYY_RateType=Pareto
+# providerX_serviceYY_rate_location=0.01
+# providerX_serviceYY_rate_shape=0.8
+
+#------------ Lifetime
+#Lifetime: Random
+#providerX_serviceYY_lifetimeType=Random
+#providerX_serviceYY_lifetime_min_0=2.0
+#providerX_serviceYY_lifetime_max_0=2.0
+#Lifetime: Exponential
+#providerX_serviceYY_lifetimeType=Exponential
+#providerX_serviceYY_lifetime_lamda=1.0
+#Lifetime: Pareto
+#providerX_serviceYY_lifetimeType=Pareto
+#providerX_serviceYY_lifetime_location=0.01
+#providerX_serviceYY_lifetime_shape=0.8
+
+
+provider0_servicesNumber=2
+#--------------------------------------------
 #---------------------------------- Service 0
-# provider0_service0_rate_type=Exponential
-# provider0_service0_lamda=1.0
-#----------------------------------
-# provider0_service0_rate_type=Pareto
-# provider0_service0_location=0.01
-# provider0_service0_shape=0.8
-#----------------------------------
-provider0_service0_type=Random
-provider0_service0_min_rate=1.0
-provider0_service0_max_rate=1.0
+provider0_service0_id=0
+provider0_service0_name=AB
+provider0_service0_estimatedRequets=1000
+#------------ Rate
+provider0_service0_RateType=Random
+provider0_service0_rate_min=1.0
+provider0_service0_rate_max=1.0
+#------------ Lifetime
+provider0_service0_lifetimeType=Exponential
+provider0_service0_lifetime_lamda=1.0
+
+#-------------------------------------------
 #----------------------------------Service 1
-provider0_service1_rate_type=Exponential
-provider0_service1_lamda=1.0
-#----------------------------------
+provider0_service1_id=0
+provider0_service1_name=VLC
+provider0_service1_estimatedRequets=1000
+#------------ Rate
+provider0_service1_RateType=Random
+provider0_service1_rate_min=1.0
+provider0_service1_rate_max=1.0
+#------------ Lifetime
+provider0_service1_lifetimeType=Exponential
+provider0_service1_lifetime_lamda=1.0
+
+
