--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -3,19 +3,23 @@
 #####################################
 
 simulationID=1
-slots=2
+slots=20
 server=nitlab3
 providers=1
-slotDuration=200
+slotDuration=2
 slotDurationMetric=seconds
 numberOfMachineStatsPerSlot=2
 
 # Number of Providers
-providers=1
+providers=2
 
 # Number of Hosts
-hostsNumber=1
+hostsNumber=5
 host_0=node080
+host_1=node006
+host_2=node007
+host_3=node008
+host_4=node009
 
 ###################################################
 # Number of Clients & Client-AP Associatiation
@@ -37,15 +41,11 @@ vmType_2=large
 ###################################################
 # Cloud Services - remote VM IPs
 ###################################################
-cloudVM_AB_number=3
-cloudVM_AB_0=190.56.8.9
-cloudVM_AB_1=190.56.8.5
-cloudVM_AB_2=190.56.8.3
+cloudVM_number=2
+cloudVM_0=190.56.8.9
+cloudVM_1=190.56.8.5
 
-cloudVM_VLC_number=3
-cloudVM_VLC_0=10.56.8.34
-cloudVM_VLC_1=19.56.8.96
-cloudVM_VLC_2=18.56.8.92
+
 
 
 
@@ -57,11 +57,13 @@ omega=1000
 
 # Fairness Factor: per Provider
 phiWeight_0=1
+phiWeight_1=1
 
 # penalty for not satisfying locally a request for service s of provider j
 penalty_p0_s0=1
 penalty_p0_s1=1
-
+penalty_p1_s0=1
+penalty_p1_s1=1
 
 
 #####################################
@@ -107,31 +109,87 @@ bandwidth_LargeVM=1
 #providerX_serviceYY_name=AB
 #providerX_serviceYY_estimatedRequets=1000
 
-#------------ Rate
-# Rate: Random
+#------------ Service Arrival Rate 
+
+# -- Arrival Rate: Random
 #providerX_serviceYY_RateType=Random
 #providerX_serviceYY_rate_min=1.0
 #providerX_serviceYY_rate_max=1.0
-# Rate: Exponential
+
+# -- Arrival Rate: Exponential
 #providerX_serviceYY_RateType=Exponential
 #providerX_serviceYY_rate_lamda=1.0
-# Rate: Pareto
+
+# -- Arrival Rate: Pareto
 # providerX_serviceYY_RateType=Pareto
 # providerX_serviceYY_rate_location=0.01
 # providerX_serviceYY_rate_shape=0.8
 
-#------------ Lifetime
+
+#------------ Service Lifetime
+
 #Lifetime: Random
 #providerX_serviceYY_lifetimeType=Random
 #providerX_serviceYY_lifetime_min_0=2.0
 #providerX_serviceYY_lifetime_max_0=2.0
+
 #Lifetime: Exponential
 #providerX_serviceYY_lifetimeType=Exponential
 #providerX_serviceYY_lifetime_lamda=1.0
+
 #Lifetime: Pareto
 #providerX_serviceYY_lifetimeType=Pareto
 #providerX_serviceYY_lifetime_location=0.01
 #providerX_serviceYY_lifetime_shape=0.8
+
+#------------ WebRequest Arrival Rate
+
+#WebRequest Arrival Rate: Random
+#providerX_serviceYY_webRequestType=Random
+#providerX_serviceYY_webRequest_min_0=2.0
+#providerX_serviceYY_webRequest_max_0=2.0
+
+#WebRequest Arrival Rate: Exponential
+#providerX_serviceYY_webRequestType=Exponential
+#providerX_serviceYY_webRequest_lamda=1.0
+
+#WebRequest Arrival Rate: Pareto
+#providerX_serviceYY_webRequestType=Pareto
+#providerX_serviceYY_webRequest_location=0.01
+#providerX_serviceYY_webRequest_shape=0.8
+
+
+# -- Local Service Rate: Random
+
+#providerX_serviceYY_localServiceRateType=Random
+#providerX_serviceYY_localServiceRate_min=1.0
+#providerX_serviceYY_localServiceRate_max=1.0
+# -- Local Service Rate: Exponential
+
+#providerX_serviceYY_localServiceRateType=Exponential
+#providerX_serviceYY_localServiceRate_lamda=1.0
+
+# -- Local Service Rate: Pareto
+# providerX_serviceYY_localServiceRateType=Pareto
+# providerX_serviceYY_localServiceRate_location=0.01
+# providerX_serviceYY_localServiceRate_shape=0.8
+
+# -- Remote Cloud Service Rate: Random
+
+#providerX_serviceYY_cloudServiceRateType=Random
+#providerX_serviceYY_cloudServiceRate_min=1.0
+#providerX_serviceYY_cloudServiceRate_max=1.0
+
+# -- Rate: Exponential
+#providerX_serviceYY_cloudServiceRateType=Exponential
+#providerX_serviceYY_cloudServiceRate_lamda=1.0
+
+# -- Rate: Pareto
+# providerX_serviceYY_cloudServiceRateType=Pareto
+# providerX_serviceYY_cloudServiceRate_location=0.01
+# providerX_serviceYY_cloudServiceRate_shape=0.8
+
+servicesNumber=2
 
 
 provider0_servicesNumber=2
@@ -140,13 +198,28 @@ provider0_servicesNumber=2
 provider0_service0_id=0
 provider0_service0_name=AB
 provider0_service0_estimatedRequets=1000
-#------------ Rate
+#------------ Arrival Rate
 provider0_service0_RateType=Random
 provider0_service0_rate_min=1.0
 provider0_service0_rate_max=1.0
 #------------ Lifetime
-provider0_service0_lifetimeType=Exponential
-provider0_service0_lifetime_lamda=1.0
+#provider0_service0_lifetimeType=Exponential
+#provider0_service0_lifetime_lamda=1.0
+provider0_service0_lifetimeType=Random
+provider0_service0_lifetime_min=2.0
+provider0_service0_lifetime_max=2.0
+
+#------------ WebRequest Arrival Rate
+provider0_service0_webRequestType=Exponential
+provider0_service0_webRequest_lamda=1.0
+
+#------------ Local Service Rate
+provider0_service0_localServiceRateType=Exponential
+provider0_service0_localServiceRate_lamda=1.0
+#------------ Cloud Service Rate
+provider0_service0_cloudServiceRateType=Random
+provider0_service0_cloudServiceRate_min=5.0
+provider0_service0_cloudServiceRate_max=10.0
 
 #-------------------------------------------
 #----------------------------------Service 1
@@ -158,7 +231,80 @@ provider0_service1_RateType=Random
 provider0_service1_rate_min=1.0
 provider0_service1_rate_max=1.0
 #------------ Lifetime
-provider0_service1_lifetimeType=Exponential
-provider0_service1_lifetime_lamda=1.0
+#provider0_service1_lifetimeType=Exponential
+#provider0_service1_lifetime_lamda=1.0
+provider0_service1_lifetimeType=Random
+provider0_service1_lifetime_min=2.0
+provider0_service1_lifetime_max=2.0
+
+#------------ WebRequest Arrival Rate
+provider0_service1_webRequestType=Exponential
+provider0_service1_webRequest_lamda=1.0
+#------------ Local Service Rate
+provider0_service1_localServiceRateType=Exponential
+provider0_service1_localServiceRate_lamda=1.0
+#------------ Cloud Service Rate
+provider0_service1_cloudServiceRateType=Random
+provider0_service1_cloudServiceRate_min=50.0
+provider0_service1_cloudServiceRate_max=100.0
 
 
+
+
+
+
+provider1_servicesNumber=2
+#--------------------------------------------
+#---------------------------------- Service 0
+provider1_service0_id=0
+provider1_service0_name=AB
+provider1_service0_estimatedRequets=1000
+#------------ Arrival Rate
+provider1_service0_RateType=Random
+provider1_service0_rate_min=1.0
+provider1_service0_rate_max=1.0
+#------------ Lifetime
+#provider1_service0_lifetimeType=Exponential
+#provider1_service0_lifetime_lamda=1.0
+provider1_service0_lifetimeType=Random
+provider1_service0_lifetime_min=2.0
+provider1_service0_lifetime_max=2.0
+
+#------------ WebRequest Arrival Rate
+provider1_service0_webRequestType=Exponential
+provider1_service0_webRequest_lamda=1.0
+
+#------------ Local Service Rate
+provider1_service0_localServiceRateType=Exponential
+provider1_service0_localServiceRate_lamda=1.0
+#------------ Cloud Service Rate
+provider1_service0_cloudServiceRateType=Random
+provider1_service0_cloudServiceRate_min=2.0
+provider1_service0_cloudServiceRate_max=4.0
+
+#-------------------------------------------
+#----------------------------------Service 1
+provider1_service1_id=0
+provider1_service1_name=VLC
+provider1_service1_estimatedRequets=1000
+#------------ Rate
+provider1_service1_RateType=Random
+provider1_service1_rate_min=1.0
+provider1_service1_rate_max=1.0
+#------------ Lifetime
+#provider1_service1_lifetimeType=Exponential
+#provider1_service1_lifetime_lamda=1.0
+provider1_service1_lifetimeType=Random
+provider1_service1_lifetime_min=2.0
+provider1_service1_lifetime_max=2.0
+
+#------------ WebRequest Arrival Rate
+provider1_service1_webRequestType=Exponential
+provider1_service1_webRequest_lamda=1.0
+#------------ Local Service Rate
+provider1_service1_localServiceRateType=Exponential
+provider1_service1_localServiceRate_lamda=1.0
+#------------ Cloud Service Rate
+provider1_service1_cloudServiceRateType=Random
+provider1_service1_cloudServiceRate_min=200.0
+provider1_service1_cloudServiceRate_max=4000.0
