fixed VM creation

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -3,7 +3,7 @@
 #####################################
 
 simulationID=1
-slots=15
+slots=5
 server=nitlab3
 providers=1
 slotDuration=3
@@ -18,6 +18,12 @@ hostsNumber=2
 host_0=node01
 host_1=node006
 
+# Method of updating statistics: 
+#simple_moving_average, 
+#cumulative_moving_average,
+#weighted_moving_average,
+#exponential moving average
+stats_updateMethod=cumulative_moving_average
 
 ###################################################
 # Number of Clients & Client-AP Associatiation
