fixed vm allocation

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -3,9 +3,8 @@
 #####################################
 
 simulationID=1
-slots=5
+slots=20
 server=nitlab3
-providers=1
 slotDuration=3
 slotDurationMetric=seconds
 numberOfMachineStatsPerSlot=2
@@ -14,9 +13,9 @@ numberOfMachineStatsPerSlot=2
 providers=2
 
 # Number of Hosts
-hostsNumber=2
+hostsNumber=1
 host_0=node01
-host_1=node006
+
 
 # Method of updating statistics: 
 #simple_moving_average, 
@@ -29,12 +28,11 @@ stats_updateMethod=cumulative_moving_average
 # Number of Clients & Client-AP Associatiation
 ###################################################
 
-clientsNumber=2
+clientsNumber=1
 #-----------------
 client_0=node081
 client_0_ap=node01
-client_1=node082
-client_1_ap=node01
+
 
 # Number of VM Types
 vmTypesNumber=3
@@ -195,41 +193,41 @@ bandwidth_LargeVM=1
 # providerX_serviceYY_cloudServiceRate_location=0.01
 # providerX_serviceYY_cloudServiceRate_shape=0.8
 
-servicesNumber=2
+servicesNumber=1
 
-
-provider0_servicesNumber=2
 #--------------------------------------------
 #---------------------------------- Service 0
-provider0_service0_id=0
+
 provider0_service0_name=AB
 provider0_service0_estimatedRequets=1000
 #------------ Arrival Rate
-provider0_service0_RateType=Random
-provider0_service0_rate_min=1.0
-provider0_service0_rate_max=1.0
+provider0_service0_RateType=Exponential
+provider0_service0_rate_lamda=0.5
+#provider0_service0_RateType=Random
+#provider0_service0_rate_min=1.0
+#provider0_service0_rate_max=1.0
 #------------ Lifetime
 #provider0_service0_lifetimeType=Exponential
-#provider0_service0_lifetime_lamda=1.0
+#provider0_service0_lifetime_lamda=5.0
 provider0_service0_lifetimeType=Random
-provider0_service0_lifetime_min=2.0
-provider0_service0_lifetime_max=2.0
+provider0_service0_lifetime_min=1.0
+provider0_service0_lifetime_max=1.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=1.0
+provider0_service0_webRequest_lamda=5.0
 
 #------------ Local Service Rate
 provider0_service0_localServiceRateType=Exponential
 provider0_service0_localServiceRate_lamda=1.0
 #------------ Cloud Service Rate
 provider0_service0_cloudServiceRateType=Random
-provider0_service0_cloudServiceRate_min=5.0
-provider0_service0_cloudServiceRate_max=10.0
+provider0_service0_cloudServiceRate_min=10.0
+provider0_service0_cloudServiceRate_max=20.0
 
 #-------------------------------------------
 #----------------------------------Service 1
-provider0_service1_id=0
+
 provider0_service1_name=VLC
 provider0_service1_estimatedRequets=1000
 #------------ Rate
@@ -255,20 +253,17 @@ provider0_service1_cloudServiceRate_min=50.0
 provider0_service1_cloudServiceRate_max=100.0
 
 
-
-
-
-
-provider1_servicesNumber=2
 #--------------------------------------------
 #---------------------------------- Service 0
-provider1_service0_id=0
+
 provider1_service0_name=AB
 provider1_service0_estimatedRequets=1000
 #------------ Arrival Rate
-provider1_service0_RateType=Random
-provider1_service0_rate_min=1.0
-provider1_service0_rate_max=1.0
+provider1_service0_RateType=Exponential
+provider1_service0_rate_lamda=1.0
+#provider1_service0_RateType=Random
+#provider1_service0_rate_min=2.0
+#provider1_service0_rate_max=2.0
 #------------ Lifetime
 #provider1_service0_lifetimeType=Exponential
 #provider1_service0_lifetime_lamda=1.0
@@ -278,7 +273,7 @@ provider1_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider1_service0_webRequestType=Exponential
-provider1_service0_webRequest_lamda=1.0
+provider1_service0_webRequest_lamda=30.0
 
 #------------ Local Service Rate
 provider1_service0_localServiceRateType=Exponential
@@ -290,7 +285,7 @@ provider1_service0_cloudServiceRate_max=4.0
 
 #-------------------------------------------
 #----------------------------------Service 1
-provider1_service1_id=0
+
 provider1_service1_name=VLC
 provider1_service1_estimatedRequets=1000
 #------------ Rate
