--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -3,14 +3,12 @@
 #####################################
 
 simulationID=1
-slots=20
+slots=30
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
 numberOfMachineStatsPerSlot=2
 
-# Number of Providers
-providers=1
 
 # Number of Hosts
 hostsNumber=1
@@ -193,9 +191,14 @@ bandwidth_LargeVM=1
 # providerX_serviceYY_cloudServiceRate_location=0.01
 # providerX_serviceYY_cloudServiceRate_shape=0.8
 
+#--------------------------------------------#--------------------------------------------
+#--------------------------------------------#--------------------------------------------
+# Number of Providers
+providers=2
+# Number of services
 servicesNumber=1
 
-#--------------------------------------------
+#--------------------------------------------#--------------------------------------------
 #---------------------------------- Service 0
 
 provider0_service0_name=AB
