--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.9.jar=lib/httpcomponents-client-4.5/lib/commons-codec-1.9.jar
 file.reference.commons-logging-1.2.jar=lib/httpcomponents-client-4.5/lib/commons-logging-1.2.jar
-file.reference.cplex.jar=lib/cplex.jar
+file.reference.cplex.jar=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/cplex.jar
 file.reference.fluent-hc-4.5.jar=lib/httpcomponents-client-4.5/lib/fluent-hc-4.5.jar
 file.reference.gnujaxp.jar=lib/gnujaxp.jar
 file.reference.gson-2.3.1.jar=lib/gson-2.3.1.jar
@@ -68,9 +68,9 @@ javac.classpath=\
     ${file.reference.uncommons-maths-1.2.2.jar}:\
     ${file.reference.org.json-20120521.jar}:\
     ${file.reference.java-json.jar}:\
-    ${file.reference.cplex.jar}:\
     ${file.reference.org.json-20120521.jar}:\
-    ${file.reference.oml4j.jar}
+    ${file.reference.oml4j.jar}:\
+    ${file.reference.cplex.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -105,7 +105,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=/opt/ibm/ILOG/CPLEX_Studio_Community1262/cplex/bin/x86_linux
+run.jvmargs=-Djava.library.path=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/bin/x86-64_linux
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
