--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -2,7 +2,8 @@
 #       Simulation Parameters
 #####################################
 
-simulationID=1
+simulationID=13
+algorithm=our
 slots=30
 server=nitlab3
 slotDuration=3
@@ -14,12 +15,7 @@ numberOfMachineStatsPerSlot=2
 hostsNumber=1
 host_0=node01
 
-
-# Method of updating statistics: 
-#simple_moving_average, 
-#cumulative_moving_average,
-#weighted_moving_average,
-#exponential moving average
+# Method of updating web request statistics: 
 stats_updateMethod=cumulative_moving_average
 
 ###################################################
@@ -45,9 +41,6 @@ vmType_2=large
 cloudVM_number=2
 cloudVM_0=190.56.8.9
 cloudVM_1=190.56.8.5
-
-
-
 
 
 #####################################
@@ -96,150 +89,54 @@ bandwidth_MediumVM=1
 bandwidth_LargeVM=1
                 
 
-
-
-
 ##########################################################################
 #     Requests for Service Configuration
 ##########################################################################
 
-#Services: AB,VLC, Other
-
-#providerX_servicesNumber=2
-
-#providerX_serviceYY_id=0
-#providerX_serviceYY_name=AB
-#providerX_serviceYY_estimatedRequets=1000
-
-#------------ Service Arrival Rate 
-
-# -- Arrival Rate: Random
-#providerX_serviceYY_RateType=Random
-#providerX_serviceYY_rate_min=1.0
-#providerX_serviceYY_rate_max=1.0
-
-# -- Arrival Rate: Exponential
-#providerX_serviceYY_RateType=Exponential
-#providerX_serviceYY_rate_lamda=1.0
-
-# -- Arrival Rate: Pareto
-# providerX_serviceYY_RateType=Pareto
-# providerX_serviceYY_rate_location=0.01
-# providerX_serviceYY_rate_shape=0.8
-
-
-#------------ Service Lifetime
-
-#Lifetime: Random
-#providerX_serviceYY_lifetimeType=Random
-#providerX_serviceYY_lifetime_min_0=2.0
-#providerX_serviceYY_lifetime_max_0=2.0
-
-#Lifetime: Exponential
-#providerX_serviceYY_lifetimeType=Exponential
-#providerX_serviceYY_lifetime_lamda=1.0
-
-#Lifetime: Pareto
-#providerX_serviceYY_lifetimeType=Pareto
-#providerX_serviceYY_lifetime_location=0.01
-#providerX_serviceYY_lifetime_shape=0.8
-
-#------------ WebRequest Arrival Rate
-
-#WebRequest Arrival Rate: Random
-#providerX_serviceYY_webRequestType=Random
-#providerX_serviceYY_webRequest_min_0=2.0
-#providerX_serviceYY_webRequest_max_0=2.0
-
-#WebRequest Arrival Rate: Exponential
-#providerX_serviceYY_webRequestType=Exponential
-#providerX_serviceYY_webRequest_lamda=1.0
-
-#WebRequest Arrival Rate: Pareto
-#providerX_serviceYY_webRequestType=Pareto
-#providerX_serviceYY_webRequest_location=0.01
-#providerX_serviceYY_webRequest_shape=0.8
-
-
-# -- Local Service Rate: Random
-
-#providerX_serviceYY_localServiceRateType=Random
-#providerX_serviceYY_localServiceRate_min=1.0
-#providerX_serviceYY_localServiceRate_max=1.0
-# -- Local Service Rate: Exponential
-
-#providerX_serviceYY_localServiceRateType=Exponential
-#providerX_serviceYY_localServiceRate_lamda=1.0
-
-# -- Local Service Rate: Pareto
-# providerX_serviceYY_localServiceRateType=Pareto
-# providerX_serviceYY_localServiceRate_location=0.01
-# providerX_serviceYY_localServiceRate_shape=0.8
-
-# -- Remote Cloud Service Rate: Random
-
-#providerX_serviceYY_cloudServiceRateType=Random
-#providerX_serviceYY_cloudServiceRate_min=1.0
-#providerX_serviceYY_cloudServiceRate_max=1.0
-
-# -- Rate: Exponential
-#providerX_serviceYY_cloudServiceRateType=Exponential
-#providerX_serviceYY_cloudServiceRate_lamda=1.0
-
-# -- Rate: Pareto
-# providerX_serviceYY_cloudServiceRateType=Pareto
-# providerX_serviceYY_cloudServiceRate_location=0.01
-# providerX_serviceYY_cloudServiceRate_shape=0.8
-
-#--------------------------------------------#--------------------------------------------
-#--------------------------------------------#--------------------------------------------
-# Number of Providers
-providers=2
-# Number of services
+providers=1
 servicesNumber=1
 
 #--------------------------------------------#--------------------------------------------
-#---------------------------------- Service 0
+#                                       Provider 0
+#--------------------------------------------#--------------------------------------------
+
+#--------------------Provider 0 & Service 0
 
 provider0_service0_name=AB
 provider0_service0_estimatedRequets=1000
-#------------ Arrival Rate
+#------------ Service Arrival Rate
 provider0_service0_RateType=Exponential
-provider0_service0_rate_lamda=0.5
-#provider0_service0_RateType=Random
-#provider0_service0_rate_min=1.0
-#provider0_service0_rate_max=1.0
-#------------ Lifetime
-#provider0_service0_lifetimeType=Exponential
-#provider0_service0_lifetime_lamda=5.0
+provider0_service0_rate_lamda=1.0
+
+#------------ Service Lifetime
 provider0_service0_lifetimeType=Random
 provider0_service0_lifetime_min=1.0
-provider0_service0_lifetime_max=1.0
+provider0_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=5.0
+provider0_service0_webRequest_lamda=10.0
 
-#------------ Local Service Rate
+#------------ Local Service ResponseTime
 provider0_service0_localServiceRateType=Exponential
 provider0_service0_localServiceRate_lamda=1.0
-#------------ Cloud Service Rate
+#------------ Cloud Service ResponseTime
 provider0_service0_cloudServiceRateType=Random
 provider0_service0_cloudServiceRate_min=10.0
 provider0_service0_cloudServiceRate_max=20.0
 
 #-------------------------------------------
-#----------------------------------Service 1
+#--------------------Provider 0 & Service 1
 
 provider0_service1_name=VLC
 provider0_service1_estimatedRequets=1000
-#------------ Rate
+#------------ Service Arrival Rate
 provider0_service1_RateType=Random
 provider0_service1_rate_min=1.0
-provider0_service1_rate_max=1.0
-#------------ Lifetime
-#provider0_service1_lifetimeType=Exponential
-#provider0_service1_lifetime_lamda=1.0
+provider0_service1_rate_max=2.0
+
+#------------ Service Lifetime
+
 provider0_service1_lifetimeType=Random
 provider0_service1_lifetime_min=2.0
 provider0_service1_lifetime_max=2.0
@@ -255,39 +152,36 @@ provider0_service1_cloudServiceRateType=Random
 provider0_service1_cloudServiceRate_min=50.0
 provider0_service1_cloudServiceRate_max=100.0
 
+#----------------------------------------------------------------------------------------
+#                                       Provider 1
+#----------------------------------------------------------------------------------------
 
-#--------------------------------------------
-#---------------------------------- Service 0
-
+#--------------------Provider 1 & Service 0
 provider1_service0_name=AB
 provider1_service0_estimatedRequets=1000
-#------------ Arrival Rate
+#------------ Service Arrival Rate
 provider1_service0_RateType=Exponential
 provider1_service0_rate_lamda=1.0
-#provider1_service0_RateType=Random
-#provider1_service0_rate_min=2.0
-#provider1_service0_rate_max=2.0
-#------------ Lifetime
-#provider1_service0_lifetimeType=Exponential
-#provider1_service0_lifetime_lamda=1.0
+
+#------------ Service Lifetime
 provider1_service0_lifetimeType=Random
-provider1_service0_lifetime_min=2.0
+provider1_service0_lifetime_min=1.0
 provider1_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider1_service0_webRequestType=Exponential
-provider1_service0_webRequest_lamda=30.0
+provider1_service0_webRequest_lamda=5.0
 
 #------------ Local Service Rate
 provider1_service0_localServiceRateType=Exponential
 provider1_service0_localServiceRate_lamda=1.0
 #------------ Cloud Service Rate
 provider1_service0_cloudServiceRateType=Random
-provider1_service0_cloudServiceRate_min=2.0
-provider1_service0_cloudServiceRate_max=4.0
+provider1_service0_cloudServiceRate_min=10.0
+provider1_service0_cloudServiceRate_max=20.0
 
 #-------------------------------------------
-#----------------------------------Service 1
+#--------------------Provider 1 & Service 1
 
 provider1_service1_name=VLC
 provider1_service1_estimatedRequets=1000
@@ -295,9 +189,8 @@ provider1_service1_estimatedRequets=1000
 provider1_service1_RateType=Random
 provider1_service1_rate_min=1.0
 provider1_service1_rate_max=1.0
-#------------ Lifetime
-#provider1_service1_lifetimeType=Exponential
-#provider1_service1_lifetime_lamda=1.0
+
+#------------ Service Lifetime
 provider1_service1_lifetimeType=Random
 provider1_service1_lifetime_min=2.0
 provider1_service1_lifetime_max=2.0
