--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -2,8 +2,8 @@
 #       Simulation Parameters
 #####################################
 
-simulationID=13
-algorithm=our
+simulationID=15
+algorithm=FF
 slots=30
 server=nitlab3
 slotDuration=3
