--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -3,7 +3,7 @@
 #####################################
 
 simulationID=15
-algorithm=FF
+algorithm=Lyapunov
 slots=30
 server=nitlab3
 slotDuration=3
@@ -115,7 +115,7 @@ provider0_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=10.0
+provider0_service0_webRequest_lamda=5.0
 
 #------------ Local Service ResponseTime
 provider0_service0_localServiceRateType=Exponential
