--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -2,8 +2,13 @@
 #       Simulation Parameters
 #####################################
 
-simulationID=15
-algorithm=Lyapunov
+# FF,
+# FFRR,
+# FFRandom,
+# Lyapunov
+
+simulationID=100
+algorithm=FFRandom
 slots=30
 server=nitlab3
 slotDuration=3
