utilization factor parse

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -7,9 +7,9 @@
 # FFRandom,
 # Lyapunov
 
-simulationID=100
-algorithm=FFRandom
-slots=30
+simulationID=1
+algorithm=FF
+slots=20
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
@@ -59,12 +59,15 @@ phiWeight_0=1
 phiWeight_1=1
 
 # penalty for not satisfying locally a request for service s of provider j
-penalty_p0_s0=1
-penalty_p0_s1=1
+penalty_p0_s0=0.00001
+penalty_p0_s1=0.00001
 
-penalty_p1_s0=1
-penalty_p1_s1=1
+penalty_p1_s0=0.00001
+penalty_p1_s1=0.00001
 
+
+# PriceBase
+priceBase=0.026
 
 #####################################
 #           Resources
@@ -111,7 +114,7 @@ provider0_service0_name=AB
 provider0_service0_estimatedRequets=1000
 #------------ Service Arrival Rate
 provider0_service0_RateType=Exponential
-provider0_service0_rate_lamda=1.0
+provider0_service0_rate_lamda=0.5
 
 #------------ Service Lifetime
 provider0_service0_lifetimeType=Random
@@ -120,7 +123,7 @@ provider0_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=5.0
+provider0_service0_webRequest_lamda=50.0
 
 #------------ Local Service ResponseTime
 provider0_service0_localServiceRateType=Exponential
@@ -175,7 +178,7 @@ provider1_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider1_service0_webRequestType=Exponential
-provider1_service0_webRequest_lamda=5.0
+provider1_service0_webRequest_lamda=50.0
 
 #------------ Local Service Rate
 provider1_service0_localServiceRateType=Exponential
