fixed concurrency issue

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -8,7 +8,8 @@
 # Lyapunov
 
 simulationID=1
-algorithm=FF
+runID=1
+algorithm=Lyapunov
 slots=20
 server=nitlab3
 slotDuration=3
@@ -59,11 +60,11 @@ phiWeight_0=1
 phiWeight_1=1
 
 # penalty for not satisfying locally a request for service s of provider j
-penalty_p0_s0=0.00001
-penalty_p0_s1=0.00001
+penalty_p0_s0=0.0000001
+penalty_p0_s1=0.0000001
 
-penalty_p1_s0=0.00001
-penalty_p1_s1=0.00001
+penalty_p1_s0=0.0000001
+penalty_p1_s1=0.0000001
 
 
 # PriceBase
