skiped points fixed

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -9,8 +9,8 @@
 
 simulationID=1
 runID=1
-algorithm=Lyapunov
-slots=20
+algorithm=FF
+slots=10
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
@@ -23,7 +23,7 @@ host_0=node01
 
 # Method of updating web request statistics: 
 stats_updateMethod=cumulative_moving_average
-
+skipWebClientStats=10
 ###################################################
 # Number of Clients & Client-AP Associatiation
 ###################################################
