fixed Random copy

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -7,10 +7,10 @@
 # FFRandom,
 # Lyapunov
 
-simulationID=1
-runID=1
-algorithm=FF
-slots=10
+simulationID=2
+runID=10
+algorithm=FFRR
+slots=40
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
@@ -23,7 +23,7 @@ host_0=node01
 
 # Method of updating web request statistics: 
 stats_updateMethod=cumulative_moving_average
-skipWebClientStats=10
+skipWebClientStats=100
 ###################################################
 # Number of Clients & Client-AP Associatiation
 ###################################################
@@ -72,13 +72,13 @@ priceBase=0.026
 
 #xi
 
-xi_p0_v0_s0=1000
-xi_p0_v1_s0=2000
-xi_p0_v2_s0=5000
+xi_p0_v0_s0=5000
+xi_p0_v1_s0=10000
+xi_p0_v2_s0=20000
 
-xi_p1_v0_s0=1000
-xi_p1_v1_s0=2000
-xi_p1_v2_s0=5000
+xi_p1_v0_s0=100
+xi_p1_v1_s0=200
+xi_p1_v2_s0=500
 
 #####################################
 #           Resources
