fixed web req stats per slot and cloud exponential

--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -7,10 +7,10 @@
 # FFRandom,
 # Lyapunov
 
-simulationID=2
-runID=10
-algorithm=FFRR
-slots=40
+simulationID=1
+runID=1
+algorithm=Lyapunov
+slots=50
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
@@ -23,7 +23,7 @@ host_0=node01
 
 # Method of updating web request statistics: 
 stats_updateMethod=cumulative_moving_average
-skipWebClientStats=100
+skipWebClientStats=0
 ###################################################
 # Number of Clients & Client-AP Associatiation
 ###################################################
@@ -134,15 +134,16 @@ provider0_service0_lifetime_max=2.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=50.0
+provider0_service0_webRequest_lamda=10.0
 
 #------------ Local Service ResponseTime
 provider0_service0_localServiceRateType=Exponential
 provider0_service0_localServiceRate_lamda=1.0
 #------------ Cloud Service ResponseTime
-provider0_service0_cloudServiceRateType=Random
-provider0_service0_cloudServiceRate_min=10.0
-provider0_service0_cloudServiceRate_max=20.0
+provider0_service0_cloudServiceRateType=Exponential
+provider0_service0_cloudServiceRate_lamda=10.0
+#provider0_service0_cloudServiceRate_min=10.0
+#provider0_service0_cloudServiceRate_max=15.0
 
 #-------------------------------------------
 #--------------------Provider 0 & Service 1
