--- a/src/simulation.properties
+++ b/src/simulation.properties
@@ -9,8 +9,10 @@
 
 simulationID=1
 runID=1
-algorithm=Lyapunov
-slots=50
+algorithm=FFRandom
+
+ 
+slots=100
 server=nitlab3
 slotDuration=3
 slotDurationMetric=seconds
@@ -76,9 +78,9 @@ xi_p0_v0_s0=5000
 xi_p0_v1_s0=10000
 xi_p0_v2_s0=20000
 
-xi_p1_v0_s0=100
-xi_p1_v1_s0=200
-xi_p1_v2_s0=500
+xi_p1_v0_s0=5000
+xi_p1_v1_s0=10000
+xi_p1_v2_s0=20000
 
 #####################################
 #           Resources
@@ -112,7 +114,7 @@ bandwidth_LargeVM=1
 #     Requests for Service Configuration
 ##########################################################################
 
-providers=1
+providers=2
 servicesNumber=1
 
 #--------------------------------------------#--------------------------------------------
@@ -125,52 +127,26 @@ provider0_service0_name=AB
 provider0_service0_estimatedRequets=1000
 #------------ Service Arrival Rate
 provider0_service0_RateType=Exponential
-provider0_service0_rate_lamda=0.5
+provider0_service0_rate_lamda=1.0
 
 #------------ Service Lifetime
 provider0_service0_lifetimeType=Random
 provider0_service0_lifetime_min=1.0
-provider0_service0_lifetime_max=2.0
+provider0_service0_lifetime_max=4.0
 
 #------------ WebRequest Arrival Rate
 provider0_service0_webRequestType=Exponential
-provider0_service0_webRequest_lamda=10.0
+provider0_service0_webRequest_lamda=100.0
 
 #------------ Local Service ResponseTime
 provider0_service0_localServiceRateType=Exponential
 provider0_service0_localServiceRate_lamda=1.0
+
 #------------ Cloud Service ResponseTime
 provider0_service0_cloudServiceRateType=Exponential
 provider0_service0_cloudServiceRate_lamda=10.0
-#provider0_service0_cloudServiceRate_min=10.0
-#provider0_service0_cloudServiceRate_max=15.0
 
-#-------------------------------------------
-#--------------------Provider 0 & Service 1
 
-provider0_service1_name=VLC
-provider0_service1_estimatedRequets=1000
-#------------ Service Arrival Rate
-provider0_service1_RateType=Random
-provider0_service1_rate_min=1.0
-provider0_service1_rate_max=2.0
-
-#------------ Service Lifetime
-
-provider0_service1_lifetimeType=Random
-provider0_service1_lifetime_min=2.0
-provider0_service1_lifetime_max=2.0
-
-#------------ WebRequest Arrival Rate
-provider0_service1_webRequestType=Exponential
-provider0_service1_webRequest_lamda=1.0
-#------------ Local Service Rate
-provider0_service1_localServiceRateType=Exponential
-provider0_service1_localServiceRate_lamda=1.0
-#------------ Cloud Service Rate
-provider0_service1_cloudServiceRateType=Random
-provider0_service1_cloudServiceRate_min=50.0
-provider0_service1_cloudServiceRate_max=100.0
 
 #----------------------------------------------------------------------------------------
 #                                       Provider 1
@@ -186,42 +162,18 @@ provider1_service0_rate_lamda=1.0
 #------------ Service Lifetime
 provider1_service0_lifetimeType=Random
 provider1_service0_lifetime_min=1.0
-provider1_service0_lifetime_max=2.0
+provider1_service0_lifetime_max=4.0
 
 #------------ WebRequest Arrival Rate
 provider1_service0_webRequestType=Exponential
-provider1_service0_webRequest_lamda=50.0
+provider1_service0_webRequest_lamda=100.0
 
 #------------ Local Service Rate
 provider1_service0_localServiceRateType=Exponential
 provider1_service0_localServiceRate_lamda=1.0
+
 #------------ Cloud Service Rate
-provider1_service0_cloudServiceRateType=Random
-provider1_service0_cloudServiceRate_min=10.0
-provider1_service0_cloudServiceRate_max=20.0
+provider1_service0_cloudServiceRateType=Exponential
+provider1_service0_cloudServiceRate_lamda=10.0
 
-#-------------------------------------------
-#--------------------Provider 1 & Service 1
 
-provider1_service1_name=VLC
-provider1_service1_estimatedRequets=1000
-#------------ Rate
-provider1_service1_RateType=Random
-provider1_service1_rate_min=1.0
-provider1_service1_rate_max=1.0
-
-#------------ Service Lifetime
-provider1_service1_lifetimeType=Random
-provider1_service1_lifetime_min=2.0
-provider1_service1_lifetime_max=2.0
-
-#------------ WebRequest Arrival Rate
-provider1_service1_webRequestType=Exponential
-provider1_service1_webRequest_lamda=1.0
-#------------ Local Service Rate
-provider1_service1_localServiceRateType=Exponential
-provider1_service1_localServiceRate_lamda=1.0
-#------------ Cloud Service Rate
-provider1_service1_cloudServiceRateType=Random
-provider1_service1_cloudServiceRate_min=200.0
-provider1_service1_cloudServiceRate_max=4000.0
